--- a/web/versions.html
+++ b/web/versions.html
@@ -59,11 +59,35 @@
 
                     <div
                         class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.4 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 30, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
+                            <li>🚀 Performance: App now launches significantly faster by checking the license in the
+                                background.</li>
+                            <li>✨ UI: Redesigned the navigation menu with a persistent category filter.</li>
+                            <li>✨ UI: Added a new 'JE & AE Automation' category for eMB Entry and eMB Verify.</li>
+                            <li>✨ UI: Optimized the header with shorter button text for a cleaner look.</li>
+                            <li>✨ UI: Removed the expand/collapse feature for a simpler, static navigation menu.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.4-Setup.exe"
+                                class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download
+                                for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.4-macOS.dmg"
+                                class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download
+                                for macOS</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.3 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 30, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
-                            <li>✨ **Feature (Demand Automation):** Added 'Demand Automations' tab to demand labours with the csv file.</li>
-                            <li>🐞 **Bug Fix:** : Fixed bug on Add activity now it will skip if activity is already there.</li>
+                            <li>✨ **Feature (Demand Automation):** Added 'Demand Automations' tab to demand labours with
+                                the csv file.</li>
+                            <li>🐞 **Bug Fix:** : Fixed bug on Add activity now it will skip if activity is already
+                                there.</li>
                         </ul>
                         <div class="mt-6 flex flex-col sm:flex-row gap-4">
                             <a href="https://nregabot.com/updates/NREGABot-v2.7.3-Setup.exe"
