--- a/web/versions.html
+++ b/web/versions.html
@@ -59,29 +59,61 @@
 
                     <div
                         class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
-                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.6 (NREGA Bot)</h3>
-                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: October 07, 2025</p>
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.7 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: October 27, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
-                            <li>🐞 <strong>Critical Bug Fix (Demand Automation):</strong> Added demo file for demand Automation, improve error handling in demand Automation.</li>
-                            <li>⚙️ <strong>Improvement (Renew & Upgrade plans):</strong> Now Renew and Upgrade plans move to directly web view for easy handling the services and making seamless.</li>
+                            <li>✨ <strong>New Feature (Workflow):</strong> Added an 'Extract from Text' button to all
+                                automation tabs to simplify pasting work codes.</li>
+                            <li>🚀 <strong>Enhancement (Demand):</strong> Demand automation now supports Rajasthan and
+                                includes minor bug fixes.</li>
+                            <li>🚀 <strong>Enhancement (UI):</strong> Autocomplete for Panchayat names now properly
+                                supports arrow key navigation and fixes freezing issues.</li>
+                            <li>🐞 <strong>Bug Fix (Reports):</strong> Fixed CSV and PDF exports to properly support
+                                Hindi fonts and improve PDF data organization.</li>
+                            <li>🐞 <strong>Bug Fix (eMB Verify):</strong> Added missing imports to resolve errors in the
+                                eMB Verify tab.</li>
                         </ul>
                         <div class="mt-6 flex flex-col sm:flex-row gap-4">
-                            <a href="https://nregabot.com/updates/NREGABot-v2.7.5-Setup.exe"
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.7-Setup.exe"
                                 class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download
                                 for Windows</a>
-                            <a href="https://nregabot.com/updates/NREGABot-v2.7.5-macOS.dmg"
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.7-macOS.dmg"
                                 class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download
                                 for macOS</a>
                         </div>
                     </div>
 
                     <div
-                    class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
+                        class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.6 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: October 07, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
+                            <li>🐞 <strong>Critical Bug Fix (Demand Automation):</strong> Added demo file for demand
+                                Automation, improve error handling in demand Automation.</li>
+                            <li>⚙️ <strong>Improvement (Renew & Upgrade plans):</strong> Now Renew and Upgrade plans
+                                move to directly web view for easy handling the services and making seamless.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.6-Setup.exe"
+                                class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download
+                                for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.6-macOS.dmg"
+                                class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download
+                                for macOS</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.5 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: September 25, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
-                            <li>🐞 <strong>Critical Bug Fix (IF Editor):</strong> Completely overhauled the Page 3 material entry logic to resolve all known 'stale element' errors and duplicate entry bugs. The automation is now significantly more reliable, especially when re-running on partially completed work codes.</li>
-                            <li>⚙️ <strong>Improvement (IF Editor):</strong> Material selection is now more precise, using 'startswith' matching to prevent incorrect selections from the dropdown.</li>
+                            <li>🐞 <strong>Critical Bug Fix (IF Editor):</strong> Completely overhauled the Page 3
+                                material entry logic to resolve all known 'stale element' errors and duplicate entry
+                                bugs. The automation is now significantly more reliable, especially when re-running on
+                                partially completed work codes.</li>
+                            <li>⚙️ <strong>Improvement (IF Editor):</strong> Material selection is now more precise,
+                                using 'startswith' matching to prevent incorrect selections from the dropdown.</li>
                         </ul>
                         <div class="mt-6 flex flex-col sm:flex-row gap-4">
                             <a href="https://nregabot.com/updates/NREGABot-v2.7.5-Setup.exe"
